# CrewAI-Server

./: .gitignore  hello.py  pyproject.toml  requirements.txt
src/: crew.py  main.py
